test_data/data_validation_tests_data/invalid_currency_codes_test_data/bank_export_large_file_currency_test_new.xlsx
version https://git-lfs.github.com/spec/v1
oid sha256:42b2f7ee3568fb0ee320af540afbdd5a7ad010f797efcae01caaf2d4ea5c2a11
size 2332063
